<resources>
    <string name="app_name">CuratorsTTIT</string>
    <string name="user_key">a56416a5s4645665</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group">Группа</string>
    <string name="edit">Изменить</string>
    <string name="cancle">Отменить</string>
    <string name="apply">Применить</string>

    <string name="INofILA">Снилс:</string>
    <string name="ITN">ИНН:</string>
    <string name="IMPN">Полис:</string>

    <string-array name="groups">
        <item>381</item>
        <item>382</item>
        <item>483</item>
        <item>481</item>
        <item>682</item>
        <item>684</item>
    </string-array>

    <string-array name="names">
        <item>Егоров Степан Богданович</item>
        <item>Гришин Фёдор Ярославович</item>
        <item>Коновалов Михаил Львович</item>
        <item>Ковалева Полина Мироновна</item>
        <item>Чеснокова Анастасия Николаевна</item>
        <item>Семенова Ульяна Никитична</item>
        <item>Булгакова Марина Артёмовна</item>
        <item>Антонова Анна Святославовна</item>
        <item>Федоров Никита Кириллович</item>
        <item>Колесникова Валерия Матвеевна</item>
        <item>Новикова Полина Ильинична</item>
        <item>Михайлов Александр Антонович</item>
        <item>Баженова Софья Васильевна</item>
        <item>Коровин Даниил Фёдорович</item>
        <item>Петрова Вера Владиславовна</item>
        <item>Орлов Глеб Фёдорович</item>
        <item>Царев Максим Романович</item>
        <item>Захаров Игорь Артёмович</item>
        <item>Павлова Ольга Александровна</item>
        <item>Грачева Екатерина Матвеевна</item>
    </string-array>

    <string-array name="slides">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="eventStatuses">
        <item>Не проведено</item>
        <item>Проведено</item>
    </string-array>

    <string-array name="educationModules">
        <!--Наименование направлений воспитания-->
        <item>Гражданско-патриотическое воспитание</item>
        <item>Молодежное предпринимательство и профессиональная навигация молодежи</item>
        <item>Студенческое самоуправление</item>
        <item>Волонтерская деятельность</item>
        <item>Развитие творческого потенциала молодежи</item>
        <item>Экологическое воспитание</item>
        <item>Спортивное и здоровьесберегающее</item>
        <item>Социально-профилактическое</item>

        <!--Модули инфраструктурной воспитательной работы-->
        <item>«Ключевые дела»</item>
        <item>«Кураторство и поддержка»</item>
        <item>Органы Студенческого самоуправления</item>
        <item>«Профессиональный выбор»</item>
        <item>«Взаимодействие с родителями»</item>
        <item>«Цифровая среда»</item>
        <item>«Правовое сознание»</item>
        <item>Психолого-педагогическое и социально-педагогическое обеспечение</item>
        <item>Инклюзивное образование</item>

    </string-array>


    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>

    <string-array name="frazes">
        <item>Лучший помощник куратора</item>
        <item>Создание отчётов в пару нажатий</item>
        <item>Данные всегда под рукой</item>
        <item>Вход</item>
    </string-array>
    <string name="sign_in">Войти в аккаунт</string>
    <string name="text_delete">удалить</string>
    <string name="text_close">закрыть</string>
    <string name="scholarship_statement_doc">Стипендиальная ведомость</string>
    <string name="svod_info_group_doc">Сводная информация по группе</string>
    <string name="curator_report_doc">Отчет куратора за семестр</string>
    <string name="month_report_doc">Ежемесячный отчет по воспитательной работе в группе</string>
    <string name="month_plan_doc">Ежемесячный план воспитательной работы в группе</string>
    <string name="year_plan_doc">Календарный план куратора на год</string>
    <string name="error">Произошла ошибка загрузки</string>
    <string name="addEvent">Добавить мероприятие</string>
</resources>