<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Мед данные"
        app:cardCornerRadius="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/medInf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorOnSecondary"
            android:onClick="show"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="Мед. данные▼"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/expandable2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvINOILA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/INofILA" />

            <EditText
                android:id="@+id/studentINOILA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvINOILA"

                android:hint="@string/INofILA"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tvITN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/ITN" />

            <EditText
                android:id="@+id/studentITN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvINOILA"
                android:layout_alignParentEnd="true"

                android:hint="@string/ITN"
                android:inputType="date"
                android:maxLength="10"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/IMPN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/studentITN"
                android:text="@string/IMPN" />

            <TextView
                android:id="@+id/seria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/IMPN"
                android:paddingVertical="10dp"
                android:text="Серия" />

            <EditText
                android:id="@+id/studentIMPNSSeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/IMPN"
                android:layout_toRightOf="@id/seria"

                android:hint="20"
                android:inputType="numberDecimal"
                android:maxLength="2" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/IMPN"
                android:layout_toEndOf="@id/studentIMPNSSeria"
                android:paddingVertical="10dp"
                android:text="Номер" />

            <EditText
                android:id="@+id/studentIMPNSNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/IMPN"
                android:layout_toRightOf="@id/number"

                android:hint="01189496421"
                android:inputType="numberDecimal" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>